tests/ui/traits/const-traits/const-impl-norecover.stderr
error: inherent impls cannot be const
  --> $DIR/const-impl-norecover.rs:5:12
   |
LL | const impl Foo {
   | -----      ^^^ inherent impl for this type
   | |
   | const because of this
   |
   = note: only trait implementations may be annotated with `const`

error: aborting due to 1 previous error

